# rig-budget

./: Cargo.toml  README.md  Readme.md
examples/: anthropic_haiku.rs
src/: lib.rs
tests/: integration.rs
